# SIDH-Sign

./: .clang-format  .gitignore  CMakeLists.txt  README.md
python_utils/: asm_code_generator.py  generateAllPrimeAsm.sh  pohlig-hellman-strategy.py
src/: CMakeLists.txt  elliptic_curve.c  elliptic_curve.h  fips202.c  fips202.h  isogeny.c  isogeny.h  parameters.h  pok.c  pok.h  prime_field.c  prime_field.h  quadratic_field.c  quadratic_field.h  sidh.c  sidh.h  signature.c  signature.h  twisted_edwards.c  twisted_edwards.h  utilities.c  utilities.h
src/P377/: P377.S  P377.c  P377_mul_sqr.S  parameters_P377.h
src/P434/: P434.S  P434.c  P434_mul_sqr.S  parameters_P434.h
src/P503/: P503.S  P503.c  P503_mul_sqr.S  parameters_P503.h
src/P546/: P546.S  P546.c  P546_mul_sqr.S  parameters_P546.h
src/P610/: P610.S  P610.c  P610_mul_sqr.S  parameters_P610.h
src/P697/: P697.S  P697.c  P697_mul_sqr.S  parameters_P697.h
src/P751/: P751.S  P751.c  P751_mul_sqr.S  parameters_P751.h
tests/: CMakeLists.txt  benchmark.c  benchmark.h  benchmark_pok.c  benchmark_prime_field.c  benchmark_quadratic_field.c  benchmark_sidh.c  benchmark_signatures.c  munit.c  munit.h  test_declarations.h  test_elliptic_curve.c  test_isogeny.c  test_main.c  test_pok.c  test_prime_field.c  test_quadratic_field.c  test_sidh.c  test_signature.c  test_utils.h
